# turbot-pipes-scripts

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CODEOWNERS  Dockerfile  README.md  SECURITY.md  Taskfile.yml  compose.yaml  package-lock.json  pyproject.toml  run-all-controls-safe.sh  run-assessment-and-dashboard.sh
docs/: BENCHMARK_RUNBOOK.md
powerpipe/: BENCHMARK_RUNBOOK.md  mod.pp  run-all-controls-safe.sh
scripts/: bootstrap-workspace.sh  check-dependencies.sh  cleanup-runtime.sh  compose-benchmark-runner.sh  compose-powerpipe.sh  compose-runner.sh  compose-steampipe.sh  compose-tailpipe.sh  discover-tailpipe-sources.sh  docker-compose.sh  doctor.sh  generate-pinned-checksums.sh  install-host-deps.sh  lib-path.sh  select-port.sh  validate-workspace.sh  vendor-local-binaries.sh  write-compose-env.sh
src/turbot_ops/: __init__.py  aws_helpers.py  benchmark.py  benchmark_common.py  benchmark_compose.py  benchmark_host.py  bootstrap.py  cli.py  config.py  doctor.py  logging_utils.py  runtime.py  steampipe.py  tailpipe.py  utilities.py  utility_checks.py  utility_install.py  utility_support.py
tailpipe/queries/: cloudtrail_summary.sql
tasks/: benchmark.yml  compose.yml  tailpipe.yml
tests/: test_aws_helpers.py  test_benchmark_common.py  test_benchmark_host.py  test_cli.py  test_config.py  test_utilities.py  test_utility_install.py  test_utility_support.py
